// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Alert Error 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-alert usa-alert--error grid-row"
    role="alert"
  >
    <div
      className="usa-alert__body grid-col flex-fill"
    >
      <h2
        className="usa-alert__heading"
      >
        Hark, an error!
      </h2>
      <p
        className="usa-alert__text"
      >
        Something's not right.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert Info 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-alert usa-alert--info grid-row"
  >
    <div
      className="usa-alert__body grid-col flex-fill"
    >
      <h2
        className="usa-alert__heading"
      >
        Information
      </h2>
      <p
        className="usa-alert__text"
      >
        Neutral text here.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert Success 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-alert usa-alert--success grid-row"
  >
    <div
      className="usa-alert__body grid-col flex-fill"
    >
      <h2
        className="usa-alert__heading"
      >
        Success alert!
      </h2>
      <p
        className="usa-alert__text"
      >
        Good job, you.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert Warning 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-alert usa-alert--warning grid-row"
  >
    <div
      className="usa-alert__body grid-col flex-fill"
    >
      <h2
        className="usa-alert__heading"
      >
        Watch out!
      </h2>
      <p
        className="usa-alert__text"
      >
        Is that what you meant to do?
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Base 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <button
    className="usa-button usa-button--base"
    onClick={[Function]}
  >
    Click me
  </button>
</div>
`;

exports[`Storyshots Button Default 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <button
    className="usa-button "
    onClick={[Function]}
  >
    Click me
  </button>
</div>
`;

exports[`Storyshots Button Disabled 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <button
    className="usa-button "
    disabled={true}
    onClick={[Function]}
  >
    Click me
  </button>
</div>
`;

exports[`Storyshots Button Secondary 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <button
    className="usa-button usa-button--secondary"
    onClick={[Function]}
  >
    Click me
  </button>
</div>
`;

exports[`Storyshots Button Unstyled 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <button
    className="usa-button usa-button--unstyled"
    onClick={[Function]}
  >
    Click me
  </button>
</div>
`;

exports[`Storyshots Checklist Box disabled 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    className="usa-fieldset"
  >
    <legend
      className="usa-sr-only"
    >
      Storybook check buttons
    </legend>
    <div
      className=""
    >
      <div
        className="usa-checkbox "
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={true}
          disabled={true}
          id="one"
          name="storybook-checklist-with-error"
          onChange={[Function]}
          type="checkbox"
          value="one"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="one"
        >
          Option one
        </label>
      </div>
      <div
        className="usa-checkbox "
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={true}
          disabled={true}
          id="two"
          name="storybook-checklist-with-error"
          onChange={[Function]}
          type="checkbox"
          value="two"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="two"
        >
          Option two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Checklist Default 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    className="usa-fieldset"
  >
    <legend
      className="usa-sr-only"
    >
      Storybook check buttons
    </legend>
    <div
      className=""
    >
      <div
        className="usa-checkbox "
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={false}
          id="one"
          name="storybook-checklist"
          onChange={[Function]}
          type="checkbox"
          value="one"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="one"
        >
          Option one
        </label>
      </div>
      <div
        className="usa-checkbox "
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={false}
          id="two"
          name="storybook-checklist"
          onChange={[Function]}
          type="checkbox"
          value="two"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="two"
        >
          Option two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Checklist Default selection 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    className="usa-fieldset"
  >
    <legend
      className="usa-sr-only"
    >
      Storybook check buttons
    </legend>
    <div
      className=""
    >
      <div
        className="usa-checkbox "
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={true}
          id="one"
          name="storybook-checklist-default-selection"
          onChange={[Function]}
          type="checkbox"
          value="one"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="one"
        >
          Option one
        </label>
      </div>
      <div
        className="usa-checkbox "
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={true}
          id="two"
          name="storybook-checklist-default-selection"
          onChange={[Function]}
          type="checkbox"
          value="two"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="two"
        >
          Option two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Checklist Horizontal 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    className="usa-fieldset"
  >
    <legend
      className="usa-sr-only"
    >
      Storybook check buttons
    </legend>
    <div
      className="grid-row flex-align-start grid-gap"
    >
      <div
        className="usa-checkbox grid-col flex-auto"
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={false}
          id="one"
          name="storybook-checklist-2"
          onChange={[Function]}
          type="checkbox"
          value="one"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="one"
        >
          Option one
        </label>
      </div>
      <div
        className="usa-checkbox grid-col flex-auto"
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={false}
          id="two"
          name="storybook-checklist-2"
          onChange={[Function]}
          type="checkbox"
          value="two"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="two"
        >
          Option two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots Checklist With error 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    className="usa-fieldset usa-form-group--error"
  >
    <legend
      className="usa-sr-only"
    >
      Storybook check buttons
    </legend>
    <span
      className="usa-error-message"
      id="checklist-error-message"
      role="alert"
    >
      You  must select one or two.
    </span>
    <div
      className=""
    >
      <div
        className="usa-checkbox "
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={false}
          id="one"
          name="storybook-checklist-with-error"
          onChange={[Function]}
          type="checkbox"
          value="one"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="one"
        >
          Option one
        </label>
      </div>
      <div
        className="usa-checkbox "
      >
        <input
          className="usa-checkbox__input"
          defaultChecked={false}
          id="two"
          name="storybook-checklist-with-error"
          onChange={[Function]}
          type="checkbox"
          value="two"
        />
        <label
          className="usa-checkbox__label"
          htmlFor="two"
        >
          Option two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots DatePicker ByRange 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    className="usa-fieldset"
  >
    <legend
      className="usa-sr-only"
    >
      Choose a date range
    </legend>
    <div
      className="DateRangePicker DateRangePicker_1"
    >
      <div>
        <div
          className="DateRangePickerInput DateRangePickerInput_1 DateRangePickerInput__withBorder DateRangePickerInput__withBorder_2"
        >
          <div
            className="DateInput DateInput_1"
          >
            <input
              aria-describedby="DateInput__screen-reader-message-startDate"
              aria-label="Start Date"
              autoComplete="off"
              className="DateInput_input DateInput_input_1"
              disabled={false}
              id="startDate"
              name="startDate"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Start Date"
              readOnly={false}
              required={false}
              type="text"
              value="10/30/2019"
            />
            <p
              className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
              id="DateInput__screen-reader-message-startDate"
            >
              Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
            </p>
          </div>
          <div
            aria-hidden="true"
            className="DateRangePickerInput_arrow DateRangePickerInput_arrow_1"
            role="presentation"
          >
            <svg
              className="DateRangePickerInput_arrow_svg DateRangePickerInput_arrow_svg_1"
              focusable="false"
              viewBox="0 0 1000 1000"
            >
              <path
                d="M694 242l249 250c12 11 12 21 1 32L694 773c-5 5-10 7-16 7s-11-2-16-7c-11-11-11-21 0-32l210-210H68c-13 0-23-10-23-23s10-23 23-23h806L662 275c-21-22 11-54 32-33z"
              />
            </svg>
          </div>
          <div
            className="DateInput DateInput_1"
          >
            <input
              aria-describedby="DateInput__screen-reader-message-endDate"
              aria-label="End Date"
              autoComplete="off"
              className="DateInput_input DateInput_input_1"
              disabled={false}
              id="endDate"
              name="endDate"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="End Date"
              readOnly={false}
              required={false}
              type="text"
              value="10/30/2019"
            />
            <p
              className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
              id="DateInput__screen-reader-message-endDate"
            >
              Navigate backward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
            </p>
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots DatePicker Default 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    className="usa-fieldset"
  >
    <legend
      className="usa-sr-only"
    >
      Choose a date
    </legend>
    <div
      className="SingleDatePicker SingleDatePicker_1"
    >
      <div>
        <div
          className="SingleDatePickerInput SingleDatePickerInput_1 SingleDatePickerInput__withBorder SingleDatePickerInput__withBorder_2"
        >
          <div
            className="DateInput DateInput_1"
          >
            <input
              aria-describedby="DateInput__screen-reader-message-date"
              aria-label="Date"
              autoComplete="off"
              className="DateInput_input DateInput_input_1"
              disabled={false}
              id="date"
              name="date"
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="Date"
              readOnly={false}
              required={false}
              type="text"
              value="10/30/2019"
            />
            <p
              className="DateInput_screenReaderMessage DateInput_screenReaderMessage_1"
              id="DateInput__screen-reader-message-date"
            >
              Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.
            </p>
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots DirectionalLink Back arrow 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <a
    className="oec-directional-link"
    href="/"
    onClick={[Function]}
  >
    <svg
      className="oec-directional-link__arrow oec-directional-link__arrow--direction-left oec-directional-link__arrow--side-left"
    >
      arrowRight.svg
    </svg>
    Look at the stuff you were looking at before
  </a>
</div>
`;

exports[`Storyshots DirectionalLink Down arrow 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <a
    className="oec-directional-link"
    href="/"
    onClick={[Function]}
  >
    <svg
      className="oec-directional-link__arrow oec-directional-link__arrow--direction-down oec-directional-link__arrow--side-left"
    >
      arrowRight.svg
    </svg>
    Check out our sweet footer
  </a>
</div>
`;

exports[`Storyshots DirectionalLink Forward arrow 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <a
    className="oec-directional-link"
    href="/"
    onClick={[Function]}
  >
    See the next thing in this series
    <svg
      className="oec-directional-link__arrow oec-directional-link__arrow--direction-right oec-directional-link__arrow--side-right"
    >
      arrowRight.svg
    </svg>
  </a>
</div>
`;

exports[`Storyshots DirectionalLink Up arrow 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <a
    className="oec-directional-link"
    href="/"
    onClick={[Function]}
  >
    <svg
      className="oec-directional-link__arrow oec-directional-link__arrow--direction-up oec-directional-link__arrow--side-left"
    >
      arrowRight.svg
    </svg>
    Look at stuff at the top of the page
  </a>
</div>
`;

exports[`Storyshots Dropdown Default 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group"
  >
    <label
      className="usa-label"
      htmlFor="Choose-one-of-these-things"
    >
      Choose one of these things
    </label>
    <select
      className="usa-select"
      id="Choose-one-of-these-things"
      name="Choose-one-of-these-things"
      onChange={[Function]}
    >
      <option>
        Choose here
      </option>
      <option
        value="one"
      >
        Thing One
      </option>
      <option
        value="two"
      >
        Thing Two
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Dropdown Disabled 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group"
  >
    <label
      className="usa-label"
      htmlFor="Choose-one-of-these-things"
    >
      Choose one of these things
    </label>
    <select
      className="usa-select"
      disabled={true}
      id="Choose-one-of-these-things"
      name="Choose-one-of-these-things"
      onChange={[Function]}
    >
      <option>
        Choose here
      </option>
      <option
        value="one"
      >
        Thing One
      </option>
      <option
        value="two"
      >
        Thing Two
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Dropdown Error 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group usa-form-group--error"
  >
    <label
      className="usa-label usa-label--error"
      htmlFor="Choose-one-of-these-things"
    >
      Choose one of these things
    </label>
    <span
      className="usa-error-message"
      id="Choose-one-of-these-things-error-message"
      role="alert"
    >
      There was an error.
    </span>
    <select
      aria-describedby="Choose-one-of-these-things-error-message"
      className="usa-select usa-input--error"
      id="Choose-one-of-these-things"
      name="Choose-one-of-these-things"
      onChange={[Function]}
    >
      <option>
        Choose here
      </option>
      <option
        value="one"
      >
        Thing One
      </option>
      <option
        value="two"
      >
        Thing Two
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Dropdown Success 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group"
  >
    <label
      className="usa-label"
      htmlFor="Choose-one-of-these-things"
    >
      Choose one of these things
    </label>
    <select
      className="usa-select usa-input--success"
      id="Choose-one-of-these-things"
      name="Choose-one-of-these-things"
      onChange={[Function]}
    >
      <option>
        Choose here
      </option>
      <option
        value="one"
      >
        Thing One
      </option>
      <option
        value="two"
      >
        Thing Two
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Header Logged in 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className=""
  >
    <div
      className="usa-overlay"
      onClick={[Function]}
    />
    <header
      className="usa-header usa-header--extended"
      role="banner"
    >
      <div
        className="usa-navbar"
      >
        <div
          className="usa-logo"
          id="extended-logo"
        >
          <em
            className="usa-logo__text"
          >
            <a
              aria-label="Hello world! home"
              href="/"
              onClick={[Function]}
            >
              Hello world!
            </a>
          </em>
        </div>
        <button
          className="usa-menu-btn"
          onClick={[Function]}
        >
          Menu
        </button>
      </div>
      <nav
        className="usa-nav"
        role="navigation"
      >
        <div
          className="usa-nav__inner"
        >
          <button
            className="usa-nav__close"
            onClick={[Function]}
          >
            <img
              alt="close"
              src="close.svg"
            />
          </button>
          <ul
            className="usa-nav__primary usa-accordion"
          >
            <li
              className="usa-nav__primary-item"
            >
              <a
                className="usa-nav__link usa-current"
                href="/"
                onClick={[Function]}
              >
                <span>
                  Active section
                </span>
              </a>
            </li>
            <li
              className="usa-nav__primary-item"
            >
              <a
                className="usa-nav__link"
                href="/another"
                onClick={[Function]}
              >
                <span>
                  Another section
                </span>
              </a>
            </li>
            <li
              className="usa-nav__primary-item"
            >
              <a
                className="usa-nav__link"
                href="/attention"
                onClick={[Function]}
              >
                <span>
                  Attention needed
                  <span
                    className="attention-needed"
                  >
                     •
                    <span
                      className="usa-sr-only"
                    >
                       (attention needed)
                    </span>
                  </span>
                </span>
              </a>
            </li>
          </ul>
          <div
            className="usa-nav__secondary"
          >
            <ul
              className="usa-nav__secondary-links"
            >
              <li
                className="usa-nav__secondary-item"
              >
                <a
                  href="/secondary"
                  onClick={[Function]}
                >
                  Secondary item
                </a>
              </li>
              <li
                className="usa-nav__secondary-item"
              >
                <a
                  href="/secondary2"
                  onClick={[Function]}
                >
                  Another secondary item
                </a>
              </li>
              <li
                className="usa-nav__secondary-item"
              >
                <a
                  href="/logout"
                  onClick={[Function]}
                >
                  Log out
                </a>
              </li>
            </ul>
            <div
              className="oec-logged-in-user"
            >
              <span>
                Hi, 
                Chris
                .
              </span>
            </div>
          </div>
        </div>
      </nav>
    </header>
  </div>
</div>
`;

exports[`Storyshots Header Logged out 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className=""
  >
    <div
      className="usa-overlay"
      onClick={[Function]}
    />
    <header
      className="usa-header usa-header--extended"
      role="banner"
    >
      <div
        className="usa-navbar"
      >
        <div
          className="usa-logo"
          id="extended-logo"
        >
          <em
            className="usa-logo__text"
          >
            <a
              aria-label="Hello world! home"
              href="/"
              onClick={[Function]}
            >
              Hello world!
            </a>
          </em>
        </div>
        <button
          className="usa-menu-btn"
          onClick={[Function]}
        >
          Menu
        </button>
      </div>
      <nav
        className="usa-nav"
        role="navigation"
      >
        <div
          className="usa-nav__inner"
        >
          <button
            className="usa-nav__close"
            onClick={[Function]}
          >
            <img
              alt="close"
              src="close.svg"
            />
          </button>
          <ul
            className="usa-nav__primary usa-accordion"
          >
            <li
              className="usa-nav__primary-item"
            >
              <a
                className="usa-nav__link usa-current"
                href="/"
                onClick={[Function]}
              >
                <span>
                  Active section
                </span>
              </a>
            </li>
            <li
              className="usa-nav__primary-item"
            >
              <a
                className="usa-nav__link"
                href="/another"
                onClick={[Function]}
              >
                <span>
                  Another section
                </span>
              </a>
            </li>
            <li
              className="usa-nav__primary-item"
            >
              <a
                className="usa-nav__link"
                href="/attention"
                onClick={[Function]}
              >
                <span>
                  Attention needed
                  <span
                    className="attention-needed"
                  >
                     •
                    <span
                      className="usa-sr-only"
                    >
                       (attention needed)
                    </span>
                  </span>
                </span>
              </a>
            </li>
          </ul>
          <div
            className="usa-nav__secondary"
          >
            <ul
              className="usa-nav__secondary-links"
            >
              <li
                className="usa-nav__secondary-item"
              >
                <a
                  href="/secondary"
                  onClick={[Function]}
                >
                  Secondary item
                </a>
              </li>
              <li
                className="usa-nav__secondary-item"
              >
                <a
                  href="/secondary2"
                  onClick={[Function]}
                >
                  Another secondary item
                </a>
              </li>
            </ul>
            <div
              className="oec-logged-in-user"
            >
              <a
                href="/login"
                onClick={[Function]}
              >
                Log in
              </a>
            </div>
          </div>
        </div>
      </nav>
    </header>
  </div>
</div>
`;

exports[`Storyshots InlineIcon Attention needed 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <span
    className="oec-inline-icon oec-inline-icon--attentionNeeded"
  >
    <span
      className="usa-sr-only"
    >
      (
      attention needed
      )
    </span>
  </span>
</div>
`;

exports[`Storyshots InlineIcon Complete 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <span
    className="oec-inline-icon oec-inline-icon--complete"
  >
    <span
      className="usa-sr-only"
    >
      (
      complete
      )
    </span>
  </span>
</div>
`;

exports[`Storyshots InlineIcon Incomplete 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <span
    className="oec-inline-icon oec-inline-icon--incomplete"
  >
    <span
      className="usa-sr-only"
    >
      (
      incomplete
      )
    </span>
  </span>
</div>
`;

exports[`Storyshots Legend Default 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="grid-row flex-wrap margin-top-2 margin-bottom-2 oec-legend"
  >
    <div
      className="grid-col-1 flex-1"
    >
      <svg
        className="legend-svg"
        height="16"
        width="20"
      >
        <rect
          className="fill-undefined"
          height="16px"
          rx="4px"
          ry="4px"
          width="16px"
        />
      </svg>
      <div
        className="width-fit-content display-inline margin-left-1 margin-bottom-1 "
      >
        <span
          className="margin-right-1 text-bold"
        >
          1
        </span>
        <span>
          One fish
        </span>
      </div>
    </div>
    <div
      className="grid-col-1 flex-1"
    >
      <svg
        className="legend-svg"
        height="16"
        width="20"
      >
        <rect
          className="fill-undefined"
          height="16px"
          rx="4px"
          ry="4px"
          width="16px"
        />
      </svg>
      <div
        className="width-fit-content display-inline margin-left-1 margin-bottom-1 "
      >
        <span
          className="margin-right-1 text-bold"
        >
          2
        </span>
        <span>
          Two fish
        </span>
      </div>
    </div>
    <div
      className="grid-col-1 flex-1"
    >
      <svg
        className="legend-svg"
        height="16"
        width="20"
      >
        <rect
          className="fill-red"
          height="16px"
          rx="4px"
          ry="4px"
          width="16px"
        />
      </svg>
      <div
        className="width-fit-content display-inline margin-left-1 margin-bottom-1 "
      >
        <span
          className="margin-right-1 text-bold"
        >
          2
        </span>
        <span>
          Red fish
        </span>
      </div>
    </div>
    <div
      className="grid-col-1 flex-1"
    >
      <svg
        className="legend-svg"
        height="16"
        width="20"
      >
        <rect
          className="fill-blue"
          height="16px"
          rx="4px"
          ry="4px"
          width="16px"
        />
      </svg>
      <div
        className="width-fit-content display-inline margin-left-1 margin-bottom-1 "
      >
        <span
          className="margin-right-1 text-bold"
        >
          4
        </span>
        <span>
          Blue fish
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots RadioGroup Default 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    className="usa-fieldset"
  >
    <legend
      className="usa-sr-only"
    >
      Storybook radio buttons
    </legend>
    <div
      className=""
    >
      <div
        className="usa-radio "
      >
        <input
          className="usa-radio__input"
          defaultChecked={false}
          id="one"
          name="storybook-radio-group"
          onChange={[Function]}
          type="radio"
          value="one"
        />
        <label
          className="usa-radio__label"
          htmlFor="one"
        >
          Option one
        </label>
      </div>
      <div
        className="usa-radio "
      >
        <input
          className="usa-radio__input"
          defaultChecked={false}
          id="two"
          name="storybook-radio-group"
          onChange={[Function]}
          type="radio"
          value="two"
        />
        <label
          className="usa-radio__label"
          htmlFor="two"
        >
          Option two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots RadioGroup Default selection 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    className="usa-fieldset"
  >
    <legend
      className="usa-sr-only"
    >
      Storybook radio buttons
    </legend>
    <div
      className=""
    >
      <div
        className="usa-radio "
      >
        <input
          className="usa-radio__input"
          defaultChecked={true}
          id="one"
          name="storybook-radio-group-default-selection"
          onChange={[Function]}
          type="radio"
          value="one"
        />
        <label
          className="usa-radio__label"
          htmlFor="one"
        >
          Option one
        </label>
      </div>
      <div
        className="usa-radio "
      >
        <input
          className="usa-radio__input"
          defaultChecked={false}
          id="two"
          name="storybook-radio-group-default-selection"
          onChange={[Function]}
          type="radio"
          value="two"
        />
        <label
          className="usa-radio__label"
          htmlFor="two"
        >
          Option two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots RadioGroup Horizontal 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    className="usa-fieldset"
  >
    <legend
      className="usa-sr-only"
    >
      Storybook radio buttons
    </legend>
    <div
      className="grid-row flex-align-start grid-gap"
    >
      <div
        className="usa-radio grid-col flex-auto"
      >
        <input
          className="usa-radio__input"
          defaultChecked={false}
          id="one"
          name="storybook-radio-group-2"
          onChange={[Function]}
          type="radio"
          value="one"
        />
        <label
          className="usa-radio__label"
          htmlFor="one"
        >
          Option one
        </label>
      </div>
      <div
        className="usa-radio grid-col flex-auto"
      >
        <input
          className="usa-radio__input"
          defaultChecked={false}
          id="two"
          name="storybook-radio-group-2"
          onChange={[Function]}
          type="radio"
          value="two"
        />
        <label
          className="usa-radio__label"
          htmlFor="two"
        >
          Option two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots RadioGroup With error 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <fieldset
    className="usa-fieldset usa-form-group--error"
  >
    <legend
      className="usa-sr-only"
    >
      Storybook radio buttons
    </legend>
    <span
      className="usa-error-message"
      id="radio-group-error-message"
      role="alert"
    >
      You  must select one or two.
    </span>
    <div
      className=""
    >
      <div
        className="usa-radio "
      >
        <input
          className="usa-radio__input"
          defaultChecked={false}
          id="one"
          name="storybook-radio-group-with-error"
          onChange={[Function]}
          type="radio"
          value="one"
        />
        <label
          className="usa-radio__label"
          htmlFor="one"
        >
          Option one
        </label>
      </div>
      <div
        className="usa-radio "
      >
        <input
          className="usa-radio__input"
          defaultChecked={false}
          id="two"
          name="storybook-radio-group-with-error"
          onChange={[Function]}
          type="radio"
          value="two"
        />
        <label
          className="usa-radio__label"
          htmlFor="two"
        >
          Option two
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Storyshots StepList Default 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <ol
    className="oec-step-list"
  >
    <li
      className="oec-step-list__step oec-step-list__step--complete"
    >
      <div
        className="oec-step-list__step__content"
      >
        <h2
          className="oec-step-list__step__title"
        >
          One small step
        </h2>
        <div
          className="oec-step-list__step__summary"
        >
          <p>
            For a man.
          </p>
        </div>
      </div>
      <div
        className="oec-step-list__step__actions"
      >
        <div
          className="oec-step-list__step__status-text"
        >
          <span
            className="oec-inline-icon oec-inline-icon--complete"
          />
          Complete
        </div>
        <a
          href="/1"
          onClick={[Function]}
        >
          Edit
          <span
            className="usa-sr-only"
          >
             
            one small step
          </span>
        </a>
      </div>
    </li>
    <li
      className="oec-step-list__step oec-step-list__step--active"
    >
      <div
        className="oec-step-list__step__content"
      >
        <h2
          className="oec-step-list__step__title"
        >
          One giant leap
        </h2>
        <div
          className="oec-step-list__step__form"
        >
          <p>
            For mankind.
          </p>
        </div>
      </div>
      <div
        className="oec-step-list__step__actions"
      />
    </li>
    <li
      className="oec-step-list__step oec-step-list__step--notStarted"
    >
      <div
        className="oec-step-list__step__content"
      >
        <h2
          className="oec-step-list__step__title"
        >
          To infinity and beyond
        </h2>
      </div>
      <div
        className="oec-step-list__step__actions"
      />
    </li>
  </ol>
</div>
`;

exports[`Storyshots Table Full width 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <table
    className="oec-table oec-table--full-width"
    id="my-table"
  >
    <thead>
      <tr>
        <th
          className="oec-table__column-header oec-sortable"
          scope="col"
        >
          <span
            className="oec-table__column-title"
            onClick={[Function]}
          >
            Name
          </span>
          <div
            className="oec-table__sort-controls"
          >
            <input
              checked={true}
              id="my-table-col0-asc"
              name="my-table-column-0-sort"
              onChange={[Function]}
              type="checkbox"
              value="asc"
            />
            <label
              className="oec-table__sort-controls__asc"
              htmlFor="my-table-col0-asc"
            >
              <span>
                Sort ascending
              </span>
            </label>
            <input
              checked={false}
              id="my-table-col0-desc"
              name="my-table-column-0-sort"
              onChange={[Function]}
              type="checkbox"
              value="desc"
            />
            <label
              className="oec-table__sort-controls__desc"
              htmlFor="my-table-col0-desc"
            >
              <span>
                Sort descending
              </span>
            </label>
          </div>
        </th>
        <th
          className="oec-table__column-header oec-sortable"
          scope="col"
        >
          <span
            className="oec-table__column-title"
            onClick={[Function]}
          >
            Price
          </span>
          <div
            className="oec-table__sort-controls"
          >
            <input
              checked={false}
              id="my-table-col1-asc"
              name="my-table-column-1-sort"
              onChange={[Function]}
              type="checkbox"
              value="asc"
            />
            <label
              className="oec-table__sort-controls__asc"
              htmlFor="my-table-col1-asc"
            >
              <span>
                Sort ascending
              </span>
            </label>
            <input
              checked={false}
              id="my-table-col1-desc"
              name="my-table-column-1-sort"
              onChange={[Function]}
              type="checkbox"
              value="desc"
            />
            <label
              className="oec-table__sort-controls__desc"
              htmlFor="my-table-col1-desc"
            >
              <span>
                Sort descending
              </span>
            </label>
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Apple
        </th>
        <th
          scope="row"
        >
          $0.75
        </th>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Avocado
        </th>
        <th
          scope="row"
        >
          $1.80
        </th>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Pear
        </th>
        <th
          scope="row"
        >
          $1.10
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Table Normal 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <table
    className="oec-table undefined"
    id="my-table"
  >
    <thead>
      <tr>
        <th
          className="oec-table__column-header oec-sortable"
          scope="col"
        >
          <span
            className="oec-table__column-title"
            onClick={[Function]}
          >
            Name
          </span>
          <div
            className="oec-table__sort-controls"
          >
            <input
              checked={true}
              id="my-table-col0-asc"
              name="my-table-column-0-sort"
              onChange={[Function]}
              type="checkbox"
              value="asc"
            />
            <label
              className="oec-table__sort-controls__asc"
              htmlFor="my-table-col0-asc"
            >
              <span>
                Sort ascending
              </span>
            </label>
            <input
              checked={false}
              id="my-table-col0-desc"
              name="my-table-column-0-sort"
              onChange={[Function]}
              type="checkbox"
              value="desc"
            />
            <label
              className="oec-table__sort-controls__desc"
              htmlFor="my-table-col0-desc"
            >
              <span>
                Sort descending
              </span>
            </label>
          </div>
        </th>
        <th
          className="oec-table__column-header oec-sortable"
          scope="col"
        >
          <span
            className="oec-table__column-title"
            onClick={[Function]}
          >
            Price
          </span>
          <div
            className="oec-table__sort-controls"
          >
            <input
              checked={false}
              id="my-table-col1-asc"
              name="my-table-column-1-sort"
              onChange={[Function]}
              type="checkbox"
              value="asc"
            />
            <label
              className="oec-table__sort-controls__asc"
              htmlFor="my-table-col1-asc"
            >
              <span>
                Sort ascending
              </span>
            </label>
            <input
              checked={false}
              id="my-table-col1-desc"
              name="my-table-column-1-sort"
              onChange={[Function]}
              type="checkbox"
              value="desc"
            />
            <label
              className="oec-table__sort-controls__desc"
              htmlFor="my-table-col1-desc"
            >
              <span>
                Sort descending
              </span>
            </label>
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Apple
        </th>
        <th
          scope="row"
        >
          $0.75
        </th>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Avocado
        </th>
        <th
          scope="row"
        >
          $1.80
        </th>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Pear
        </th>
        <th
          scope="row"
        >
          $1.10
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Tag Default 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <span
    className="usa-tag"
  >
    I AM A TAG
  </span>
</div>
`;

exports[`Storyshots TextInput Default 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group"
  >
    <label
      className="usa-label"
      htmlFor="Default-text-input"
    >
      Default text input
       
    </label>
    <input
      className="usa-input"
      id="Default-text-input"
      name="Default-text-input"
      onChange={[Function]}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots TextInput Disabled 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group"
  >
    <label
      className="usa-label"
      htmlFor="Default-text-input"
    >
      Default text input
       
    </label>
    <input
      className="usa-input"
      disabled={true}
      id="Default-text-input"
      name="Default-text-input"
      onChange={[Function]}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots TextInput Error 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group usa-form-group--error"
  >
    <label
      className="usa-label usa-label--error"
      htmlFor="Default-text-input"
    >
      Default text input
       
    </label>
    <span
      className="usa-error-message"
      id="input-error-message"
      role="alert"
    >
      Fix this error
    </span>
    <input
      aria-describedby="input-error-message"
      className="usa-input usa-input--error"
      id="Default-text-input"
      name="Default-text-input"
      onChange={[Function]}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots TextInput Optional 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group"
  >
    <label
      className="usa-label"
      htmlFor="Default-optional-text-input"
    >
      Default optional text input
       
      (Optional)
    </label>
    <input
      className="usa-input"
      id="Default-optional-text-input"
      name="Default-optional-text-input"
      onChange={[Function]}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots TextInput Success 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group"
  >
    <label
      className="usa-label"
      htmlFor="Default-text-input"
    >
      Default text input
       
    </label>
    <input
      className="usa-input usa-input--success"
      id="Default-text-input"
      name="Default-text-input"
      onChange={[Function]}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots TextInput With default value 1`] = `
<div
  style={
    Object {
      "padding": "40px",
    }
  }
>
  <div
    className="usa-form-group"
  >
    <label
      className="usa-label"
      htmlFor="Default-text-input"
    >
      Default text input
       
    </label>
    <input
      className="usa-input"
      defaultValue="default text"
      id="Default-text-input"
      name="Default-text-input"
      onChange={[Function]}
      type="text"
    />
  </div>
</div>
`;
